<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_resource">

    <TextView
        android:id="@+id/Camaraderie_header_for_create_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cambria_italic"
        android:text="Camaraderie"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_for_org_view"
        android:padding="24dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Camaraderie_header_for_create_events"
        app:layout_constraintVertical_bias="0.0">

        <!-- EVENT DATE -->

        <EditText
            android:id="@+id/input_field_for_create_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Event Name"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/input_field_for_create_event_registration_time"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/cambria_italic"

            android:hint="Deadline Time"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/input_field_for_create_event_registration_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/input_field_for_create_event_registration_deadline"
            app:layout_constraintTop_toTopOf="@+id/input_field_for_create_event_registration_deadline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/input_field_for_create_event_registration_deadline"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:fontFamily="@font/cambria_italic"
            android:hint="Registration Deadline"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/input_field_for_create_event_date"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:fontFamily="@font/cambria_italic"
            android:hint="Date"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintWidth_percent="0.30" />

        <TextView
            android:id="@+id/input_field_for_create_event_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Event Time"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/input_field_for_create_event_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.687"
            app:layout_constraintStart_toEndOf="@+id/input_field_for_create_event_date"
            app:layout_constraintTop_toTopOf="@+id/input_field_for_create_event_date"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.45" />

        <EditText
            android:id="@+id/input_field_for_create_event_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_field_for_create_event_registration_deadline"
            app:layout_constraintWidth_percent="0.45" />

        <EditText
            android:id="@+id/input_field_for_create_event_description"
            android:layout_width="308dp"
            android:layout_height="104dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_field_for_create_event_location"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/button_for_add_picture"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#8FE5E4FF"
            android:fontFamily="@font/cambria"
            android:text="Add Picture"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_field_for_create_event_description"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <Switch
            android:id="@+id/geoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambria"
            android:text="Enable Geolocation"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_for_add_picture" />

        <EditText
            android:id="@+id/input_field_for_create_event_num_of_attendees"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Number of Attendees"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/geoSwitch"
            app:layout_constraintWidth_percent="0.45" />

        <EditText
            android:id="@+id/input_field_for_create_event_waitlist_limit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cambria_italic"
            android:hint="Optional Waitlist Limit"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_field_for_create_event_num_of_attendees"
            app:layout_constraintTop_toBottomOf="@id/geoSwitch"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/button_for_going_back"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8FE5E4FF"
            android:fontFamily="@font/cambria"
            android:text="Back"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_field_for_create_event_waitlist_limit"
            app:layout_constraintWidth_percent="0.45"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/button_for_confirm"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#B06CF9CC"
            android:fontFamily="@font/cambria"
            android:text="Confirm"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_for_going_back"
            app:layout_constraintTop_toBottomOf="@id/input_field_for_create_event_waitlist_limit"
            app:layout_constraintWidth_percent="0.45"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/cambria_italic"
            android:text="Date:"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field_for_create_event_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/cambria_italic"
            android:text="Deadline to Register:"
            android:textColor="@color/white"
            android:textColorHint="#9C9C9C"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field_for_create_event_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
