...
        android:textColor="@color/white"
        android:fontFamily="@font/cambria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camaraderie_header_for_main_dashboard" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:fontFamily="@font/cambria_italic"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/header_for_search_bar" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
...
