...
        android:paddingBottom="20dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camaraderie_header_for_main_dashboard"
        app:layout_constraintBottom_toTopOf="@id/list"/>

    <TextView
        android:id="@+id/name_for_main_dashboard"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
...
